fix(quest): decline and prev align correctly in demo skin

--- a/styles/_skins.scss
+++ b/styles/_skins.scss
@@ -12,9 +12,14 @@
 		position:absolute; 
 		right:15px; 
 		margin:8px 0;
-        @at-root [dir="rtl"]#{&} { right: auto; left: 15px; }
 	}
 }
+
+// there is a bug with @at-root in sass so we do this manually
+[dir="rtl"] .default-skin [piq-page] .page-buttons .page-decline, 
+[dir="rtl"] .default-skin [piq-page] .page-buttons .page-prev, 
+[dir="rtl"] .demo-skin [piq-page] .page-buttons .page-decline,
+[dir="rtl"] .demo-skin [piq-page] .page-buttons .page-prev { right: auto; left: 15px; }
 
 .simple-skin [piq-page] .page-buttons {
 	text-align:right;
